fix aside element overlapping footer

--- a/client/src/CSS/index.css
+++ b/client/src/CSS/index.css
@@ -166,7 +166,7 @@ hr {
   background-color: #fff;
   padding: 10px;
   position: fixed;
-  height: 100vh;
+  height: min-content;
   align-items: start;
   top: 60px;
   right: 0;
